# commodity-stat-arb

./: .env.example  .gitignore  README.md  RESEARCH_MEMO_DRAFT.md  alembic.ini  docker-compose.yml  pyproject.toml
backtest/: cost_model.py  engine.py  portfolio.py  sizing.py  strategy.py
config/: brent_calendar.yaml  brent_wti.yaml  crack_321.yaml  loader.py  schema.py  wti_calendar.yaml
data/: build_spreads.py  ingest.py  microstructure.py  roll_calendar.py  series_builder.py
data/providers/: base.py  databento_provider 2.py  databento_provider.py  yfinance_provider.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_widen_contract_month_to_varchar20.py  0003_add_contract_metrics.py  0004_add_ts_regime_to_spreads.py  0005_add_quantity_to_orders.py
docs/: PLAN.md  notes.md
execution/: almgren_chriss.py
research/: 01_phase1_verification.ipynb  02_phase2_analysis.ipynb  carry_model.py  hypotheses.md  pair_screener.py  phase25_notes.md  phase2_notes.md  phase3_notes.md  phase4_notes.md  phase5_notes.md  phase6_notes.md  phase7_notes.md  phase8_notes.md  robustness_summary.md  roll_diagnostics.py  screening_report.md  signals.py  stats.py  structural_breaks.json
scripts/: ingest_and_build.py  new_migration.sh  run_all_backtests.py  run_phase5_sweep.py  run_phase6_ac.py  run_phase7_robustness.py
tests/: test_almgren_chriss.py  test_roll_calendar.py
ui/: app.py
ui/assets/: custom.css
