[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commodity-stat-arb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "yfinance>=0.2",
    "databento>=0.35",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "dash>=2.16",
    "dash-bootstrap-components>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["data", "db", "config", "backtest", "execution", "ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
